rancher-stack/aplb/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplb
  namespace: cattle-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aplb
  template:
    metadata:
      labels:
        app: aplb
    spec:
      containers:
        - name: aplb
          image: jtmb92/aplb:latest # Replace with your actual image
          ports:
            - containerPort: 80
