rancher-stack/aplb/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplb-service
  namespace: cattle-system
spec:
  selector:
    app: aplb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
